--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -104,12 +104,26 @@
     --ion-color-teal-shade: #03b196;
     --ion-color-teal-tint: #1cceb3;
   
-    --ion-color-pink: #e92f8cce;
-    --ion-color-pink-rgb: 52,65,55;
-    --ion-color-pink-contrast: #ffffff;
-    --ion-color-pink-contrast-rgb: 255,255,255;
-    --ion-color-pink-shade: #2e3930;
-    --ion-color-pink-tint: #48544b;
+    // --ion-color-pink: #e92f8cce;
+    // --ion-color-pink-rgb: 52,65,55;
+    // --ion-color-pink-contrast: #ffffff;
+    // --ion-color-pink-contrast-rgb: 255,255,255;
+    // --ion-color-pink-shade: #2e3930;
+    // --ion-color-pink-tint: #48544b;
+
+    --ion-color-pink: #ee96c3;
+	--ion-color-pink-rgb: 238,150,195;
+	--ion-color-pink-contrast: #ffffff;
+	--ion-color-pink-contrast-rgb: 0,0,0;
+	--ion-color-pink-shade: #d184ac;
+	--ion-color-pink-tint: #f0a1c9;
+
+  // --ion-color-pink: #e92f8c;
+	// --ion-color-pink-rgb: 233,47,140;
+	// --ion-color-pink-contrast: #ffffff;
+	// --ion-color-pink-contrast-rgb: 255,255,255;
+	// --ion-color-pink-shade: #cd297b;
+	// --ion-color-pink-tint: #eb4498;
   
     --ion-color-lilac: #7f13be;
     --ion-color-lilac-rgb: 179,19,190;
